# UFJF-Machine-Learning-Toolkit

./: .gitignore  .travis.yml  AOS_8hpp_source.html  AdaBoostClassifier_8hpp_source.html  AutoWeightedVoting_8hpp_source.html  BaggingClassifier_8hpp_source.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Classifier_8hpp_source.html  Clusterer_8hpp_source.html  Core_8hpp_source.html  Data_8hpp.html  Data_8hpp.js  Data_8hpp__dep__incl.map  Data_8hpp__dep__incl.md5  Data_8hpp__incl.map  Data_8hpp__incl.md5  Data_8hpp_source.html  Datasets_8hpp_source.html  DistanceMatrix_8hpp_source.html  DistanceMetric_8hpp_source.html  DualClassifier_8hpp.html  DualClassifier_8hpp__dep__incl.map  DualClassifier_8hpp__dep__incl.md5  DualClassifier_8hpp__incl.map  DualClassifier_8hpp__incl.md5  DualClassifier_8hpp_source.html  DualRegressor_8hpp_source.html  Ensemble_8hpp_source.html  FeatureSelection_8hpp_source.html  Fisher_8hpp_source.html  Golub_8hpp_source.html  IMA_8hpp.html  IMA_8hpp__dep__incl.map  IMA_8hpp__dep__incl.md5  IMA_8hpp__incl.map  IMA_8hpp__incl.md5  IMA_8hpp_source.html  KMeans_8hpp_source.html  (+976 more)
CLI/: CMakeLists.txt  main.cpp
Examples/: CMakeLists.txt  bench_exptmp.cpp  examp_adaboost.cpp  examp_bagging.cpp  examp_data.cpp  examp_ensemble.cpp  examp_expression.cpp  examp_ova.cpp  examp_ova_oversamp.cpp  examp_oversampling.cpp  examp_ovo.cpp  examp_ovo_oversamp.cpp  examp_perccom.cpp  examp_valid.cpp
Examples/Classifier/: CMakeLists.txt  examp_ova.cpp  examp_ova_oversamp.cpp  examp_oversampling.cpp  examp_ovo.cpp  examp_ovo_oversamp.cpp  knn_res.cpp  knn_rsm_res.cpp
Examples/Core/: CMakeLists.txt  bench_exptmp.cpp  examp_data.cpp  examp_expression.cpp
Examples/Ensemble/: CMakeLists.txt  examp_adaboost.cpp  examp_awvoting.cpp  examp_bagging.cpp  examp_ensemble.cpp  examp_perccom.cpp  res_knn_bagging.cpp  res_knn_ens_bag_w.cpp  res_knn_ens_bag_w_rsm.cpp  res_knn_ens_bag_ww.cpp  res_knn_ens_w_dsm.cpp  res_knn_ens_w_dsml.cpp  res_knn_ensem.cpp  res_knn_est_acc.cpp  res_knn_rsm.cpp
Examples/FeatureSelection/: CMakeLists.txt  examp_fisher.cpp  examp_golub.cpp  examp_rfe.cpp
Examples/Validation/: CMakeLists.txt  examp_valid.cpp
GUI/: CMakeLists.txt  main.cpp
GUI/include/: barplot2d.h  datasetmanager.h  mainwindow.h  scatterplot2d.h  scatterplot3d.h  visualizationbase.h
GUI/src/: barplot2d.cpp  datasetmanager.cpp  mainwindow.cpp  scatterplot2d.cpp  scatterplot3d.cpp  visualizationbase.cpp
GUI/ui/: barplot2d.ui  datasetmanager.ui  mainwindow.ui  scatterplot2d.ui  scatterplot3d.ui
Modules/: CMakeLists.txt
Modules/Classifier/: CMakeLists.txt  Classifier.hpp
Modules/Classifier/include/: Classifier.hpp  DualClassifier.hpp  IMA.hpp  KNN.hpp  KNNClassifier.hpp  OneVsAll.hpp  OneVsOne.hpp  Perceptron.hpp  PrimalClassifier.hpp  SMO.hpp  Sampling.hpp
Modules/Classifier/src/: IMA.cpp  IMA.hpp  KNN.cpp  KNNClassifier.cpp  OneVsAll.cpp  Perceptron.cpp  Perceptron.hpp  SMO.cpp
Modules/Clusterer/: CMakeLists.txt  Clusterer.hpp
Modules/Clusterer/include/: Clusterer.hpp  KMeans.hpp
Modules/Clusterer/src/: KMeans.cpp
Modules/Core/: CMakeLists.txt  Core.hpp
Modules/Core/include/: BallTree.hpp  CoverTree.hpp  Data.hpp  DistanceMetric.hpp  ExprOps.hpp  ExprScalar.hpp  ExprTraits.hpp  Kernel.hpp  Learner.hpp  Point.hpp  Random.hpp  Sampling.hpp  Solution.hpp  Statistics.hpp  Timer.hpp  Utils.hpp
Modules/Core/src/: Data.cpp  Kernel.cpp  MLToolkit.hpp  Statistics.cpp  Utils.cpp
Modules/Ensemble/: CMakeLists.txt  Ensemble.hpp
Modules/Ensemble/include/: AdaBoostClassifier.hpp  AutoWeightedVoting.hpp  BaggingClassifier.hpp  Ensemble.hpp  PerceptronCommittee.hpp  VotingClassifier.hpp  kNNEnsemble.hpp  kNNEnsembleBagging.hpp  kNNEnsembleDSM.hpp  kNNEnsembleRSM.hpp  kNNEnsembleW.hpp  kNNEnsembleWPDSM.hpp  kNNEnsembleWPDSMLinear.hpp  kNNEnsembleWRSM.hpp  kNNEnsembleWSS.hpp
Modules/Ensemble/src/: AdaBoostClassifier.hpp  Ensemble.hpp  (+5 more)
Modules/FeatureSelection/: CMakeLists.txt  FeatureSelection.hpp
Modules/Regressor/: CMakeLists.txt
Modules/Validation/: CMakeLists.txt  Validation.hpp
Modules/Visualize/: CMakeLists.txt
Testes/: CMakeLists.txt  iris_mult.csv  teste_data.cpp  teste_mltk.cpp  teste_ova.cpp  teste_ova_oversamp.cpp  teste_oversampling.cpp  teste_ovo.cpp  teste_ovo_oversamp.cpp  teste_valid.cpp
Tests/: CMakeLists.txt  balltree_test.cpp  covertree_test.cpp  data_test.cpp  dsm_test.cpp  hsnw_test.cpp  selecfeats_test.cpp
docs/: CMakeLists.txt  Doxyfile.in  README.md  meson.build
docs/source/: Doxyfile  conf.py  index.rst
subprojects/: CMakeLists.txt  ufjfmltk.hpp
subprojects/ufjfmltk-classifier/: CMakeLists.txt  Classifier.hpp  meson.build
subprojects/ufjfmltk-clusterer/: CMakeLists.txt  Clusterer.hpp  meson.build
subprojects/ufjfmltk-core/: CMakeLists.txt  meson.build
subprojects/ufjfmltk-ensemble/: CMakeLists.txt  meson.build
subprojects/ufjfmltk-featselect/: CMakeLists.txt  meson.build
subprojects/ufjfmltk-regressor/: CMakeLists.txt  Regressor.hpp  meson.build
subprojects/ufjfmltk-valid/: CMakeLists.txt  meson.build
subprojects/ufjfmltk-visual/: CMakeLists.txt  Visualize.hpp  meson.build
subprojects/ufjfmltk_classifier/: meson.build
subprojects/ufjfmltk_clusterer/: meson.build
subprojects/ufjfmltk_core/: Core.hpp  meson.build
subprojects/ufjfmltk_ensemble/: Ensemble.hpp  meson.build
subprojects/ufjfmltk_featselect/: FeatureSelection.hpp  meson.build
subprojects/ufjfmltk_regressor/: Regressor.hpp  meson.build
subprojects/ufjfmltk_valid/: meson.build
subprojects/ufjfmltk_visual/: Visualization.hpp  Visualize.hpp  meson.build
tests/: CMakeLists.txt
tests/classifier/: CMakeLists.txt  class_tests.cpp  main.cpp
tests/clusterer/: CMakeLists.txt  clusterer_tests.cpp  main.cpp
tests/core/: CMakeLists.txt  data_test.cpp  main.cpp  samp_test.cpp  stats_test.cpp
tests/ensemble/: CMakeLists.txt  ensemble_tests.cpp  main.cpp
tests/featselect/: CMakeLists.txt  featselect_tests.cpp  main.cpp
tests/regressor/: CMakeLists.txt  regressor_tests.cpp
tests/visualization/: CMakeLists.txt  main.cpp  vis_test.cpp
(+991 files in other folders)
